--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   flutter_secure_storage: ^5.0.2
 
   # State Managment
-  provider: ^6.0.4
+  flutter_bloc: ^8.1.1
   get_it: ^7.2.0
+  equatable: ^2.0.5
 
   # Utils
   either_dart: ^0.1.4
